# umai-agent-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-sdk.yml
docs/: api-reference.md  identity.md  installation.md  openai-agents.md  production-checklist.md
examples/: custom_identity_store.py  fail_open_demo_mode.py  quickstart_openai_agents.py  raw_http_equivalent.py
src/umai/: __init__.py  client.py  crypto.py  errors.py  identity.py  models.py  stores.py
src/umai/integrations/: openai_agents.py
src/umai_agent_sdk/: __init__.py  client.py  openai_agents.py
tests/: test_http_contract.py  test_identity_and_signing.py  test_packaging_imports.py
