[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "umai-agent-sdk"
version = "0.1.0"
description = "Python SDK for UMAI Agent Mesh Governance and guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "UMAI" }]
keywords = ["umai", "agent", "guardrails", "governance", "openai-agents"]
dependencies = [
  "cryptography>=42.0.5",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
openai = ["openai-agents"]
dev = [
  "build>=1.2.1",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://umai.ai"
Documentation = "https://docs.umai.ai"
Repository = "https://github.com/UMAI-Solutions/umai-agent-sdk-python"
Issues = "https://github.com/UMAI-Solutions/umai-agent-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/umai", "src/umai_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
